# rust-opentelemetry-newrelic

./: README.md  compose.yml
app/: Cargo.toml  Dockerfile
app/src/: main.rs
config/: otelcol.yaml
