[package]
name = "otel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.21" }
opentelemetry_sdk = { version = "0.21.1", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.14" }
opentelemetry-semantic-conventions = "0.13" 
actix-web-opentelemetry = { version = "0.16", features = ["metrics"] }
tokio = { version = "1.34.0", features = ["full"] }
actix-web = "4.4.0"
rand = "0.8.5"
serde_json = "1.0.108"
